EKB-0031 fix redis keyed lock provider